--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="layout.css">
+    <title>Phoebe Christensen, WDD 131</title>
+    <nav>This is some good old fashioned html content.</nav>
 </head>
 <body>
     
