--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="styles/layout.css">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="layout.css">
     <title>Phoebe Christensen, WDD 131</title>
     <nav>This is some good old fashioned html content.</nav>
 </head>
