I have commited some truly awful graphic design sins and I hope you enjoy them

--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -5,9 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phoebe Christensen, WDD 131</title>
-    <nav>This is some good old fashioned html content.</nav>
+    <nav>This is some good old fashioned html content. This here's also the header.</nav>
 </head>
+<div class="left-sidebar">This is the left sidebar.</div>
 <body>
-    
+    <text>Over here we've got some more text in a hopefully horrendous font.</text>
+    <main>
+        Do we want to do another font here? Or should we find a fun color?
+    </main>
+    <div class="right-sidebar">This is the right sidebar!</div>
 </body>
+<footer>And here's the footer!</footer>
 </html>
