--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <link rel="stylesheet" href="styles/layout.css">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phoebe Christensen, WDD 131</title>
-    <nav>This is some good old fashioned html content. This here's also the header.</nav>
-</head>
 <div class="left-sidebar">This is the left sidebar.</div>
 <body>
+    <header>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Phoebe Christensen, WDD 131</title>
+        <nav>This is some good old fashioned html content. This here's also the header.</nav>
+    </header>
     <text>Over here we've got some more text in a hopefully horrendous font.</text>
     <main>
         Do we want to do another font here? Or should we find a fun color?
