--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -3,17 +3,17 @@
 <link rel="stylesheet" href="styles/layout.css">
 <div class="left-sidebar">This is the left sidebar.</div>
 <body>
-    <header>
+    <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Phoebe Christensen, WDD 131</title>
         <nav>This is some good old fashioned html content. This here's also the header.</nav>
-    </header>
+    </head>
     <text>Over here we've got some more text in a hopefully horrendous font.</text>
     <main>
         Do we want to do another font here? Or should we find a fun color?
     </main>
     <div class="right-sidebar">This is the right sidebar!</div>
+    <footer>And here's the footer!</footer>
 </body>
-<footer>And here's the footer!</footer>
 </html>
