--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -7,7 +7,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Phoebe Christensen, WDD 131</title>
-        <nav>This is some good old fashioned html content. This here's also the header.</nav>
+        <nav>
+            <a>This is some good old fashioned html content. This here's also the header.</a>
+            <a>It asked for four "a" tags so we're giving it content.</a>
+            <a>Our little dog is so cute</a>
+            <a>Here we goooooooo</a>
+        </nav>
     </head>
     <text>Over here we've got some more text in a hopefully horrendous font.</text>
     <main>
