--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -14,7 +14,7 @@
         <a>Here we goooooooo</a>
     </nav>
     <div class="left-sidebar">This is the left sidebar.</div>
-    <text>Over here we've got some more text in a hopefully horrendous font.</text>
+    <div>Over here we've got some more text in a hopefully horrendous font.</div>
     <main>
         Do we want to do another font here? Or should we find a fun color?
     </main>
