--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="styles/layout.css">
 </head>
 <body>
-    <nav>
-        <a>This is some good old fashioned html content. This here's also the header.</a>
-        <a>It asked for four "a" tags so we're giving it content.</a>
-        <a>Our little dog is so cute</a>
-        <a>Here we goooooooo</a>
-    </nav>
+    <header>
+        <nav>
+            <a>This is some good old fashioned html content. This here's also the header.</a>
+            <a>It asked for four "a" tags so we're giving it content.</a>
+            <a>Our little dog is so cute</a>
+            <a>Here we goooooooo</a>
+        </nav>
+    </header>
     <div class="left-sidebar">This is the left sidebar.</div>
     <div>Over here we've got some more text in a hopefully horrendous font.</div>
     <main>
