bless this professor; all the instructions are so concise

--- a/week01/index.html
+++ b/week01/index.html
@@ -18,10 +18,19 @@
         </nav>
     </header>
     <main>
-
+        <section class="card">
+            <h1>I think I'm supposed to have a heading here?</h1>
+            <h2>It also talks about links (and an image????) but it didn't specify so I'm coming back (use your own content and resource links)</h2>
+        </section>
+        <section class="card"></section>
     </main>
     <footer>
-
+        <p>
+            <span id="currentyear"></span>
+            Phoebe Christensen
+            Arizona
+        </p>
+        <p id="lastModified"></p>
     </footer>
 </body>
 </html>
