linking css and adding a cute color for the header background

--- a/week01/index.html
+++ b/week01/index.html
@@ -6,6 +6,7 @@
     <title>WDD 131 - Dynamic Web Fundamentals - Phoebe Christensen</title>
     <meta description="WDD 131 - Dynamic Web Fundamentals, Phoebe Christensen, this is my homepage!">
     <meta author="Phoebe Christensen">
+    <link rel="stylesheet" href="styles/base.css">
 </head>
 <body>
     <header>
