we're getting closer and closer to matching the vibes of the screenshot they showed us

--- a/week01/index.html
+++ b/week01/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Phoebe's Page</h1>
+        <h1 class="description">Phoebe's Page</h1>
         <nav> 
             <a href="linkedin.com">LinkedIn</a>
             <a href="https://byui.instructure.com/">I-Learn</a>
@@ -20,7 +20,7 @@
     </header>
     <main>
         <section class="card">
-            <h1>I think I'm supposed to have a heading here?</h1>
+            <h1 class="another_header">I think I'm supposed to have a heading here?</h1>
             <h2>It also talks about links (and an image????) but it didn't specify so I'm coming back (use your own content and resource links)</h2>
         </section>
         <section class="card"></section>
