oh I think I'm onto something

--- a/week01/index.html
+++ b/week01/index.html
@@ -14,8 +14,8 @@
         <nav> 
             <a href="linkedin.com">LinkedIn</a>
             <a href="https://byui.instructure.com/">I-Learn</a>
-            <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/2-ne/4?lang=eng">2 Nephi 4:20</a>
-            <a href="google.com">This Will Have My Final Project</a>
+            <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/2-ne/4?lang=eng">Scripture</a>
+            <a href="google.com">Final Project</a>
         </nav>
     </header>
     <main>
