at what point does it stop being trial and error and start being witchcraft

--- a/week01/index.html
+++ b/week01/index.html
@@ -7,6 +7,9 @@
     <meta description="WDD 131 - Dynamic Web Fundamentals, Phoebe Christensen, this is my homepage!">
     <meta author="Phoebe Christensen">
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Old+Standard+TT&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
