committing because I'm ✨learning✨

--- a/week01/index.html
+++ b/week01/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="./getdates.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Old+Standard+TT&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -26,7 +27,9 @@
             <h1 class="another_header">I think I'm supposed to have a heading here?</h1>
             <h2>It also talks about links (and an image????) but it didn't specify so I'm coming back (use your own content and resource links)</h2>
         </section>
-        <section class="card"></section>
+        <section class="card">
+            <div>tskjlasfj</div>
+        </section>
     </main>
     <footer>
         <p>
