--- a/week01/index.html
+++ b/week01/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <script src="./getdates.js"></script>
+    <script src="./scripts/getdates.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Old+Standard+TT&display=swap" rel="stylesheet">
 </head>
 <body>
