--- a/week01/index.html
+++ b/week01/index.html
@@ -33,6 +33,7 @@
     </main>
     <footer>
         <p>
+            &copy
             <span id="currentyear"></span>
             Phoebe Christensen
             Arizona
