--- a/week01/index.html
+++ b/week01/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <h1 class="description">Phoebe's Page</h1>
+        <h1 class="description">WDD 131: Dynamic Web Fundamentals--Phoebe Christensen's Page</h1>
         <nav> 
             <a href="linkedin.com">LinkedIn</a>
             <a href="https://byui.instructure.com/">I-Learn</a>
@@ -28,7 +28,10 @@
             <h2>It also talks about links (and an image????) but it didn't specify so I'm coming back (use your own content and resource links)</h2>
         </section>
         <section class="card">
-            <div>tskjlasfj</div>
+            <h2 class="web-dev">Web Dev Resources</h2>
+            <ul>
+                <li href="https://stackoverflow.com/">Stack Overflow</li>
+            </ul>
         </section>
     </main>
     <footer>
