the picture no longer overwhelms the page

--- a/week01/index.html
+++ b/week01/index.html
@@ -24,13 +24,23 @@
     </header>
     <main>
         <section class="card">
-            <h1 class="another_header">I think I'm supposed to have a heading here?</h1>
-            <h2>It also talks about links (and an image????) but it didn't specify so I'm coming back (use your own content and resource links)</h2>
+            <div class="another_header">
+            <h2>About Me</h2>
+            </div>
+            <p>It also talks about links (and an image????) but it didn't specify so I'm coming back (use your own content and resource links)</p>
+            <img/ src="images/IMG_2592.jpeg">
         </section>
         <section class="card">
-            <h2 class="web-dev">Web Dev Resources</h2>
+            <div class="lilminiheader">
+                <h2 class="web-dev">Web Dev Resources</h2>
+            </div>
             <ul>
-                <li href="https://stackoverflow.com/">Stack Overflow</li>
+                <li><a href="https://stackoverflow.com/">Stack Overflow</a></li>
+                <li><a href="freecodecamp.org">Free Code Camp</a></li>
+                <li><a href="https://developer.mozilla.org/en-US/">MDN Web Docs</a></li>
+                <li><a href="https://css-tricks.com/">CSS-Tricks</a></li>
+                <li><a href="w3schools.com">W3 Schools</a></li>
+                <li><a href="https://codepen.io/">CodePen</a></li>
             </ul>
         </section>
     </main>
