just work please

--- a/week01/index.html
+++ b/week01/index.html
@@ -28,7 +28,9 @@
             <h2>About Me</h2>
             </div>
             <p>It also talks about links (and an image????) but it didn't specify so I'm coming back (use your own content and resource links)</p>
+            <div class="picdiv">
             <img/ src="images/IMG_2592.jpeg">
+            </div>
         </section>
         <section class="card">
             <div class="lilminiheader">
