oh I have so little confidence in what I'm doing

--- a/week01/index.html
+++ b/week01/index.html
@@ -27,9 +27,11 @@
             <div class="another_header">
             <h2>About Me</h2>
             </div>
-            <p>It also talks about links (and an image????) but it didn't specify so I'm coming back (use your own content and resource links)</p>
             <div class="picdiv">
-            <img/ src="images/IMG_2592.jpeg">
+            <img src="./images/IMG_2592.jpeg" height="200"/>
+            </div>
+            <div class="wordsdiv">
+                <p>I live in Arizona, I love to crochet and read, and I work at a hotel.</p>
             </div>
         </section>
         <section class="card">
